<resources>
    <string name="app_name">TimeSheet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!-- Nav Drawer-->
    <string name="navigation_drawer_aberto">aberto</string>
    <string name="navigation_drawer_fechado">fechado</string>

    <!-- nav drawer header-->
    <string name="empty" />
    <string name="nav_drawer_nome_usuario">nome usuario</string>
    <string name="nav_drawer_email">email usuario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_botao_entrar">ENTRAR</string>
    <string name="title_activity_home">Resumo</string>


    <!-- Activity Perfil-->
    <string name="activity_perfil_title">PerfilActivity</string>
    <string name="activity_perfil_campo_senha_atual">senha atual</string>
    <string name="activity_perfil_campo_senha_nova">nova senha</string>
    <string name="activity_perfil_campo_senha_nova_repetir">repetir senha</string>
    <string name="activity_perfil_text_view_alterar_senha">Alterar senha</string>
    <string name="activity_perfil_button_floationg_msg_senha_alterada">senha alterada</string>

    <!-- Activity Login-->
    <string name="activity_login_edit_text_hint_email">email</string>
    <string name="activity_login_edit_text_hint_senha">senha</string>
    <string name="activity_login_set_error_caractere_invalido">caractere inválido</string>
    <string name="activity_login_set_error_minimo_caractere">a senha deve ter no minimo 6 digitos</string>
    <string name="activity_login_set_error_email_invalido">email inválido</string>
    <string name="activity_login_toast_usuario_ou_senha_invalido">usuario ou senha invalido</string>


    <!-- Activity Home-->
    <string name="activity_home_text_view_subtitle_nome_e_projeto"><![CDATA[Nome da funcionalidade & Projeto]]></string>
    <string name="activity_home_text_view_subtitle_tempo"><![CDATA[Data & Horario de inicio e término]]></string>
    <string name="activity_home_text_view_subtitle_descricao">Comentários sobre a atividade</string>
    <string name="activity_home_button_floating_msg_enviar">enviado</string>
    <string name="activity_home_edit_text_nome_atividade">nome da tarefa</string>
    <string name="activity_home_edit_text_nome_atividade_error">5 caracteres</string>
    <string name="activity_home_text_view_title_projeto">Projeto</string>
    <string name="activity_home_text_view_title_adicionar_atividade">Adicionar Atividade</string>
    <string name="activity_home_text_view_title_comentarios">Comentários</string>
    <string name="activity_home_edit_text_descricao">Esse campo pode ser vazio</string>
    <string name="activity_home_menu_action_sair">logoff</string>
    <string name="include_activity_home_text_view_title_resumo_da_semana">Resumo da semana</string>
    <string name="include_activity_home_text_view_title_ultimas_tarefas">Ultimas Tarefas</string>
    <string name="include_activity_home_text_view_ir_para_tarefas">Ir para tarefas</string>

    <!-- Activity Registros-->
    <string name="title_activity_registros">Registros de tarefas</string>


    <!-- Activity Projetos-->
    <string name="title_activity_projetos">ProjetosActivity</string>


    <!-- Dialog Fragment Perfil Alterar senha-->
    <string name="activity_profile_edit_caractere_invalido">caractere inválido</string>
    <string name="activity_profile_edit_set_error_minimum_character">a senha deve ter no minimo 6 digitos</string>
    <string name="activity_home_button_horas_inicio_error">hora de inicio</string>
    <string name="activity_home_button_horas_fim_error">hora de inicio</string>
    <string name="dialog_fragment_login_esqueceu_senha_text_view">Digite seu email</string>
    <string name="dialog_fragment_login_button_enviar_senha">ENVIAR</string>


    <!--  Activity New Task-->
    <string name="title_activity_new_Task">New Task</string>
    <string name="menu_context_tasks_activity_action_edit">editar</string>
    <string name="menu_context_tasks_activity_action_delete">delete</string>
    <string name="activity_tasks_action_mode_title_selected_task">Selecione as Tarefas</string>
    <string name="activity_tasks_action_mode_subtitle_selected_one_task">task selecionada</string>
    <string name="activity_tasks_action_mode_subtitle_selected_tasks">tasks selecionadas</string>
    <string name="activity_home_button_date_error">Data</string>
    <string name="activity_project_details">Project Details</string>
    <string name="activity_project_details_text_title_time_total">Tempo Total</string>
    <string name="activity_project_details_text_title_attendees">Participantes</string>
    <string name="activity_project_details_text_title_time_attendees">Tempo por participantes</string>
    <string name="activity_perfil_text_title_projetos_andamento">Projetos em andamento</string>
    <string name="activity_profile_edit_button_alterar_photo">ALTERAR</string>
    <string name="activity_profile_edit_edit_text_senha_current">Senha atual</string>
    <string name="activity_profile_edit_edit_text_senha_new">Nova senha</string>
    <string name="activity_profile_edit_edit_text_senha_confirm">Confirmar senha</string>
    <string name="activity_profile_edit">Profile edit</string>
    <string name="activity_profile_edit_password_changed_success">Senha alterada com sucesso</string>
    <string name="activity_profile_menu_action_filter">filtro</string>
    <string name="activity_profile_menu_action_order">Ordenar</string>
    <string name="activity_tasks_text_view_filter">Todos os projetos</string>
    <string name="activity_tasks_text_view_order_recent">Mais recentes</string>
    <string name="activity_tasks_text_view_order_title">Ordenado por:</string>
    <string name="activity_tasks_text_view_order_old">Mais antigas</string>
    <string name="activity_tasks_text_view_order_more_time">Maior tempo</string>
    <string name="activity_tasks_text_view_order_less_time">Menor tempo</string>
    <string name="activity_tasks_text_view_order_name">Nome</string>
    <string name="fragment_profile_edit_gallery">Galeria</string>
    <string name="fragment_profile_edit_camera">Camera</string>
    <string name="include_activity_home_text_view_total_de_horas">Total de horas</string>

    <string name="title_activity_scrolling">name</string>
    <string name="title_activity_project_information">information</string>

</resources>
