<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.com.mowa.timesheet.activity.PerfilActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />


    <item android:id="@+id/activity_profile_menu_action_order" android:title="@string/activity_profile_menu_action_order"
        android:orderInCategory="100" app:showAsAction="always" android:icon="@drawable/ic_sort_white_24dp"/>

    <item android:id="@+id/activity_profile_menu_action_filter" android:title="@string/activity_profile_menu_action_filter"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>
