<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_mowa"/>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/activity_login_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_edit_text_hint_email"
            android:inputType="textEmailAddress"
            android:text="walky.silva@mowa.com.br"/>
    </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/activity_login_edit_text_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_login_edit_text_hint_senha"
            android:inputType="textPassword"
            android:text="123456"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/activity_login_botao_entrar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:gravity="center"
        android:text="@string/login_botao_entrar"
        android:background="@color/laranja_mowa"/>

    <TextView
        android:id="@+id/activity_login_text_view_esqueceu_senha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:text="esqueceu a senha ?"
        android:gravity="right"
        android:textColor="@color/blue_text_button_dialog_fragment"
        android:textSize="16dip"/>

</LinearLayout>
