<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="match_parent"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:orientation="vertical"
    tools:context="br.com.mowa.timesheet.dialog.PerfilAlterarSenhaDialogFragment"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="56dp"
        android:text="Alterar Senha"/>



    <EditText
        android:id="@+id/dialog_fragment_perfil_edit_text_senha_atual"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/activity_perfil_campo_senha_atual"
        android:textColorHighlight="@color/primary"/>


    <EditText
        android:id="@+id/dialog_fragment_perfil_edit_text_senha_nova"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/activity_perfil_campo_senha_nova"
        android:textColorHighlight="@color/primary"/>


    <EditText
        android:id="@+id/dialog_fragment_perfil_edit_text_senha_repetir"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/activity_perfil_campo_senha_nova_repetir"
        android:textColorHighlight="@color/primary"/>




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/dialog_fragment_perfil_alterar_senha_button_cancelar"
            android:layout_toLeftOf="@+id/dialog_fragment_perfil_alterar_senha_button_confirmar"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingRight="8dp"
            android:background="@color/white"
            android:textColor="@color/blue_text_button_dialog_fragment"
            android:text="cancelar" />

        <Button
            android:id="@+id/dialog_fragment_perfil_alterar_senha_button_confirmar"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:paddingRight="8dp"
            android:background="@color/white"
            android:textColor="@color/blue_text_button_dialog_fragment"
            android:text="confirmar"/>

    </RelativeLayout>


</LinearLayout>
