<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <include
            android:id="@+id/activity_profile_edit_toolbar"
            layout="@layout/include_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp">
                
                <ImageView
                    android:id="@+id/activity_profile_edit_icon_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:src="@drawable/ic_person_black_24dp"/>
                <EditText
                    android:id="@+id/activity_profile_edit_edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_toRightOf="@+id/activity_profile_edit_icon_name"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="16dp"
                    android:textSize="16sp"/>
            </RelativeLayout>





            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/activity_profile_edit_icon_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_email_black_24dp"/>
                <EditText
                    android:id="@+id/activity_profile_edit_edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@+id/activity_profile_edit_icon_email"
                    android:layout_marginLeft="24dp"
                    android:textSize="16sp"/>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/activity_profile_edit_icon_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_person_black_24dp"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/activity_profile_edit_circle_photo"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:src="@drawable/image_perfil"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginLeft="24dp"
                    android:layout_toRightOf="@+id/activity_profile_edit_icon_person"/>
                
                <Button
                    android:id="@+id/activity_profile_edit_button_alterar_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/activity_profile_edit_circle_photo"
                    android:layout_marginLeft="16dp"
                    android:text="@string/activity_profile_edit_button_alterar_photo"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/activity_profile_edit_icon_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:paddingTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/ic_security"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="24dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="16dp"
                    android:paddingTop="8dp"
                    android:layout_toRightOf="@+id/activity_profile_edit_icon_password">


                    <EditText
                        android:id="@+id/activity_profile_edit_edit_text_password_current"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/activity_profile_edit_edit_text_senha_current"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/activity_profile_edit_edit_text_password_new"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/activity_profile_edit_edit_text_senha_new"
                        android:textSize="16sp"/>

                    <EditText
                        android:id="@+id/activity_profile_edit_edit_text_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/activity_profile_edit_edit_text_senha_confirm"
                        android:textSize="16sp"/>


                </LinearLayout>
            </RelativeLayout>




        </LinearLayout>



    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_profile_edit_floating_button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        android:layout_gravity="bottom|end"
        app:elevation="6dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:pressedTranslationZ="12dp"
        app:borderWidth="0dp"
        app:backgroundTint="@color/laranja_mowa"/>

</FrameLayout>